# TrifoilTools

./: .gitignore  0main.pd
Fraise8/fruit/: decode_single.pd  encode.pd  fruit.h~  fruit.pd  send.pd
Fraise8/pico/: CMakeLists.txt  device.cmake  device_template_CMakeLists.txt  find_tools.cmake  make.pd  program_fraise.pd  program_usb.pd
Fraise8/pico/fraise/: CMakeLists.txt  fraise.cpp  fraise.h  fraise.hpp
Fraise8/pico/fraise_bootloader/: CMakeLists.txt  bootloader.c  bootloader.cpp  bootloader.hpp  main.c  main.cpp
Fraise8/pico/fraise_bus/: CMakeLists.txt  fraise_bus.cpp  fraise_bus.hpp  fraise_poller.cpp  fraise_uart.cpp  ringbuffer.hpp
Fraise8/pico/fraise_device/: CMakeLists.txt  fraise_device.c  fraise_device.cpp
Fraise8/pico/fraise_eeprom/: fraise_eeprom.c
Fraise8/pico/fraise_master/: CMakeLists.txt  fraise_bootload.c  fraise_master.c  fraise_master.cpp  fraise_master.h  main.c  main.cpp
Fraise8/pico/fraise_uart/: CMakeLists.txt  fraise_uart.h
Fraise8/pico/fraise_uart/native/: CMakeLists.txt  fraise_uart.c
Fraise8/pico/rp2040/: device_map.ld
Fraise8/pico/usb_bootloader/: CMakeLists.txt  bootloader.c
Fraise8/pied/: pied.pd
Fraise8/pied/intern/: MAKE.pd  extract_cmake_set.pd
barrette/: 0barrette.pd
barrette/barrette_fw/: barrette_fw.hex  board.cmake  config.cmake  hall_shifter.hpp  main.cpp
modules/: CMakeLists.txt
modules/claim_pio/: CMakeLists.txt  claim_pio.c  claim_pio.h
modules/ws2812/: CMakeLists.txt  ws2812.c
programer_fw/: board.cmake  config.cmake  main.cpp  programer_fw-0.hex
testboard/: 0testboard.pd
testboard/testboard_fw/: board.cmake  config.cmake  main.cpp  testboard_fw.hex
